fix emoji spacing

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,6 +1,5 @@
 .emoji {
-	margin-left: 4px;
-	margin-right: 9px;
+	margin: 0 0.25rem;
 }
 
 .section-title {
